VSE: Slip Strip Operator Doesn't Register Transformation on Confirm #70626

Closed
opened 2019-10-08 03:45:22 +02:00 by Bun ny · 3 comments

System Information
Operating system: Windows 7 x64
Graphics card: NVIDIA GeForce GTX 580

Blender Version
Broken: 2.81 a856c5eccf
Worked: 2.79

Short description of error
The Slip operator doesn't register its transformation on confirm. With waveform display turned on you can see that the strip visually slips, but the audio playback stays the same. User has to invoke the Grab operator in order to get the audio playback to update.

Exact steps for others to reproduce the error
Create new .blend, set Scene length to one second, add a longer audio strip to the VSE, play animation, use the Slip operator ('S' in the VSE editor) and slip the strip a few seconds in either direction. The same second of audio will continue to play as if nothing was changed. Tap 'G' and cancel the Grab operation, and the audio will update as it was supposed to.

**System Information** Operating system: Windows 7 x64 Graphics card: NVIDIA GeForce GTX 580 **Blender Version** Broken: 2.81 a856c5eccffb Worked: 2.79 **Short description of error** The Slip operator doesn't register its transformation on confirm. With waveform display turned on you can see that the strip visually slips, but the audio playback stays the same. User has to invoke the Grab operator in order to get the audio playback to update. **Exact steps for others to reproduce the error** Create new .blend, set Scene length to one second, add a longer audio strip to the VSE, play animation, use the Slip operator ('S' in the VSE editor) and slip the strip a few seconds in either direction. The same second of audio will continue to play as if nothing was changed. Tap 'G' and cancel the Grab operation, and the audio will update as it was supposed to.
Author

Added subscriber: @bunny

Added subscriber: @bunny
Philipp Oeser self-assigned this 2019-10-08 09:24:40 +02:00

This issue was referenced by 0b983169da

This issue was referenced by 0b983169dacf7fc4dc5b4daa3f744b9d9fc1dc25
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70626
No description provided.