Fix T70626: VSE: Slip Strip Operator doesn't refresh audio on confirm

Maniphest Tasks: T70626

Reviewed By: ISS, sergey

Differential Revision: https://developer.blender.org/D6016